inventory networking, more simple door model

--- a/ProjectSettings/Input.config
+++ b/ProjectSettings/Input.config
@@ -223,6 +223,13 @@
       "GamepadCode": "None",
       "GroupName": "Other",
       "Title": null
+    },
+    {
+      "Name": "ChatLocal",
+      "KeyboardCode": "y",
+      "GamepadCode": "None",
+      "GroupName": "Other",
+      "Title": null
     }
   ],
   "__guid": "f17e35db-b63d-44a8-bcd0-b06ae7eb5a94",
